@@ -1,3 +1,11 @@
+2013-01-24  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/56081
+	* resolve.c (resolve_select): Add argument 'select_type', reject
+	non-scalar expressions.
+	(resolve_select_type,resolve_code): Pass new argument to
+	'resolve_select'.
+
 2013-01-17  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/55983
